log-output/manifests/service-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output
  namespace: exercises
spec:
  type: ClusterIP
  selector:
    app: log-output
  ports:
    - port: 5000
      protocol: TCP
      targetPort: 5000
