log-output/manifests/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-nodeport
spec:
  type: NodePort
  selector:
    app: log-output-app
  ports:
    - port: 5000
      protocol: TCP
      targetPort: 5000
